# cpp-demo

./: CMakeLists.txt  README.md
src/: create_image.cpp  usb_camera.cpp
